<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocationTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="latitudeLabel">Latitude: </string>
    <string name="longitudeLabel">Longitude: </string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="info">Your Location:</string>
    <string name="altitudeLabel">Altitude: </string>
    <string name="timestampLabel">timestamp: </string>

</resources>
